<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/purple_500">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/button_back"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/basic_red">
        <TextView
            android:paddingStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/basic_info"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/im_unfold_1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/more"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/unfold_1_sign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/unfold_1_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic"
                android:layout_marginTop="2dp">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/click_count"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/null_refreshed"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic"
                android:layout_marginTop="2dp">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/surprise_key"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_surprise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/null_refreshed"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/surprise_out_of"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic"
                android:layout_marginTop="2dp">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/cd_key_enabled_count"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_cd_key_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/null_refreshed"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/cd_key_enabled_count_out_of"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/basic_red"
        android:layout_marginTop="10dp">
        <TextView
            android:paddingStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/test_info"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/im_unfold_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/more"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/unfold_2_sign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/unfold_2_context">
            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/version_key"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/version"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/date_key"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/basic_red"
        android:layout_marginTop="10dp">
        <TextView
            android:paddingStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/others"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/im_unfold_3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/more"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/unfold_3_sign"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/unfold_3_context">
            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/cd_key"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/cd_key_et"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:maxLines="1"/>

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_a"
                    android:text="@string/go"
                    android:id="@+id/cd_key_btn"
                    android:layout_gravity="center"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/report_of_experience"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/learning"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/official_website"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/official_website"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/command"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/basic">
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="命令操作"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>